<resources>
    <string name="app_name">Fbook</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="my_book">My book</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="search_book">Search Book</string>
    <string name="internal_book">Internal Books</string>
    <string name="google_book">Google Books</string>
    <string name="input_book_to_search">Input Book to search</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="shared_by">Shared by</string>
    <string name="activities">Activities</string>
    <string name="review">Review</string>
    <string name="waiting">Waiting</string>
    <string name="reading">Reading</string>
    <string name="returning">Returning</string>
    <string name="returned">Returned</string>
    <string name="invalid_email_format">Invalid email format!</string>
    <string name="is_empty">Empty, please enter!</string>
    <string name="least_6_characters">Please enter at least 6 characters!</string>
    <string name="lastest_book">Latest books</string>
    <string name="top_viewed_book">Top viewed books</string>
    <string name="top_rating_book">Top rating books</string>
    <string name="top_waiting_book">Top waiting books</string>
    <string name="top_read_book">Top read books</string>
    <string name="more">More</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit!</string>
    <string name="add_your_book">Add Your Book</string>
    <string name="category">Category</string>
    <string name="office">Office</string>
    <string name="publish_date">Publish date</string>
    <string name="create_book">Create book</string>
    <string name="import_data_from_google_book">Import data from google books</string>
    <string name="can_find_data">Can\'t find data</string>
    <string name="you_must_be_login_into_perform_this_function">You must be login in to perform this function. Please login !</string>
    <string name="want_to_read">Want to read</string>
    <string name="author_two_dots">Author:</string>
    <string name="i_have_this_book">I have this book</string>
    <string name="remove_owner_this_book">Remove onwer this book</string>
    <string name="cancel_waiting_this_book">Cancel waiting this book</string>
    <string name="view_count">Count view:</string>
    <string name="publish_date_two_dots">Publish date:</string>
    <string name="inform">Inform</string>
    <string name="edit_category_favorite">Edit Category Favorite</string>
    <string name="update">Update</string>
    <string name="are_you_sure_remove_owner_this_book">Are you sure remove owner this book?</string>
    <string name="are_you_sure_add_owner_this_book">Are you sure add owner this book?</string>
    <string name="do_you_want_to_read_this_book">Do you want to read this book?</string>
    <string name="update_success">Update Success !</string>
    <string name="do_you_want_cancel_waiting_this_book">Do you want cancel waiting this book?</string>
    <string name="choose_category">Choose Category</string>
    <string name="sort_by">Sort By </string>
    <string name="this_book_does_not_have_the_owner">This book does not have the owner !</string>
    <string name="you_already_own_this_book">You already own this book !</string>
    <string name="view_details">View details</string>
    <string name="user_review">User Review</string>
    <string name="user_waiting">User Waiting</string>
    <string name="user_reading">User Reading</string>
    <string name="user_returning">User Returning</string>
    <string name="user_returned">User Returned</string>
    <string name="desc">Desc</string>
    <string name="asc">Asc</string>
    <string name="waiting_approve">Waiting Approve</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="number_requests">Have %s requests</string>
    <string name="view_all_request">View all request</string>


    <!-- Dialog -->
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="more_info">More Info</string>
    <string name="choose">Choose</string>
    <string name="clear">Clear</string>

    <!-- Common -->
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="user_name">User Name</string>
    <string name="setting">Setting</string>
    <string name="approve_request">Approve Request</string>
    <string name="share_book">Share Book</string>
    <string name="personal_infor">Personal Information</string>
    <string name="category_favorite">Category Favorite</string>
    <string name="phone">Phone</string>
    <string name="code">Code</string>
    <string name="position">Position</string>
    <string name="followed_by">Followed by</string>
    <string name="name">Name</string>
    <string name="following">Following</string>
    <string name="select_image_from_gallery_or_camera">Select image from gallery or camera</string>
    <string name="select_office">Select office</string>
    <string name="are_u_want_to_sign_out">Are you sure want to sign out?</string>
    <string name="select_category">Select category</string>
    <string name="add_successful">Add successful</string>
    <string name="import_data_from_internal_book">Import data from internal books</string>
    <string name="please_enter_title">Please enter title</string>

    <!-- date format -->
    <string name="date_format_yyyy_MM_dd">yyyy-MM-dd</string>
</resources>
