<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screen.SearchBook.internalbook.InternalBookActivity"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.fbook.screen.SearchBook.internalbook.InternalBookFragment"
            />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RadioGroup
            android:id="@+id/radioGroupSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp_5"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:theme="@style/RadioButtonStyle"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:theme="@style/RadioButtonStyle"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:theme="@style/RadioButtonStyle"
                />
        </RadioGroup>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutSearchBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupSearch"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_book_to_search"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutSearchBook"
                app:layout_constraintLeft_toLeftOf="@+id/textInputLayoutSearchBook"
                app:layout_constraintRight_toRightOf="@+id/textInputLayoutSearchBook"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutSearchBook"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutSearchBook"
            />
    </android.support.constraint.ConstraintLayout>
</layout>
