<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.fbook.screen.sharebook.ShareBookActivity"
            />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        >
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onClickArrowBack()}"
                    app:srcCompat="@drawable/md_nav_back"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_35"
                    android:layout_marginStart="@dimen/dp_35"
                    android:text="@string/add_your_book"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20"
                    />

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/button_create"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar_layout"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_10"
                >
                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_click"
                    android:text="@string/import_data_from_google_book"
                    android:textAllCaps="false"
                    android:textColor="#3d3030"
                    android:textSize="17sp"
                    />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    bind:errorText="@{viewModel.titleError}"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/title"
                        android:text="@={viewModel.mBookRequest.title}"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:errorText="@{viewModel.authorError}"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/author"
                        android:text="@={viewModel.mBookRequest.author}"
                        />
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    >
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        >
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            >
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:editable="false"
                                android:focusable="false"
                                android:hint="@string/category"

                                />
                        </android.support.design.widget.TextInputLayout>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|end"
                            app:srcCompat="@drawable/ic_arrow_drop_down"
                            />
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        >
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            >
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:editable="false"
                                android:focusable="false"
                                android:hint="@string/office"

                                />
                        </android.support.design.widget.TextInputLayout>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|end"
                            app:srcCompat="@drawable/ic_arrow_drop_down"
                            />
                    </FrameLayout>
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/publish_date"
                        android:text="@={viewModel.mBookRequest.publishDate}"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:errorText="@{viewModel.descriptionError}"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:minHeight="@dimen/dp_100"
                        android:text="@={viewModel.mBookRequest.description}"
                        />
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="@dimen/dp_100"
                        android:layout_height="@dimen/dp_100"
                        android:onClick="@{() -> viewModel.onClickAddImage()}"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_add_image"
                        />
                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_marginStart="@dimen/dp_5"
                        android:orientation="horizontal"
                        app:layoutManager="LinearLayoutManager"
                        bind:recyclerAdapter="@{viewModel.mImageSelectedAdapter}"
                        />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <Button
            android:id="@+id/button_create"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:onClick="@{() -> viewModel.onClickCreateBook()}"
            android:text="@string/create_book"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_17"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
    </android.support.constraint.ConstraintLayout>
</layout>
